# RL-in-Production-Bootcamp-Resources

./: .gitignore  pyproject.toml
assignments/: lecture1.html  lecture1.ipynb  lecture2.1.html  lecture2.1.ipynb  lecture2.2.html  lecture2.2.ipynb  lecture3.html  lecture3.ipynb  lecture4.html  lecture4.ipynb  lecture5.1.ipynb  lecture5.2.ipynb  lecture5.3.ipynb  lecture5.4.ipynb  lecture5.5.ipynb  lecture6.ipynb
blogs/: BLOG_RULES.md  CLEANUP.md  README.md
blogs/01-rl-intro-and-prerequisites/: README.md
blogs/02-mdps-and-bellman/: README.md
blogs/03-dp-mc-td/: README.md
blogs/04-sarsa-qlearning-dqn/: README.md
blogs/05-policy-gradients/: README.md
blogs/06-trpo-ppo/: README.md
blogs/07-rlhf/: README.md
blogs/08-grpo/: README.md
blogs/09-dpo-and-agentic-rl/: README.md
blogs/assets/: figures.py
code/mars-rover/: README.md  requirements.txt  starter.py
lectures/01-fundamentals/: README.md  lecture-01-proofs.tex
lectures/03-policy-gradients/assignments/: L3_Build_the_Archer.ipynb  README.md
lectures/capstone/: CAPSTONE.md  README.md  capstone-rlvr-arena.tex  countdown.py  evaluate.py  requirements.txt  run_model.py  train_grpo.py
marketing/: rules.md
marketing/blog1/: follow-ups.md  linkedin.md  x-article.md
marketing/blog2/: follow-ups.md  linkedin.md  x-article.md
marketing/blog3/: follow-ups.md  linkedin.md  x-article.md
marketing/blog4/: follow-ups.md  linkedin.md  x-article.md
marketing/blog5/: follow-ups.md  linkedin.md  x-article.md
marketing/blog6/: follow-ups.md  linkedin.md  x-article.md
marketing/blog7/: follow-ups.md  linkedin.md  x-article.md
marketing/blog8/: follow-ups.md  linkedin.md  x-article.md
(+8 files in other folders)
