[project]
name = "rl-in-production-bootcamp-resources"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autorom[accept-rom-license]>=0.6.1",
    "gymnasium[accept-rom-license,atari,box2d,toy-text]>=1.3.0",
    "imageio>=2.37.3",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "nbconvert>=7.17.1",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "seaborn>=0.13.2",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]
